Добавление Data JPA и слоя db-layer
1. Добавил docker-compose.yml для поднятия postgres в docker-контейнере
2. Добавил стартер spring-boot-starter-data-jpa для поднятия инфраструктуры Hibernate ORM
3. Добавил зависимость на liquibase-core для наката db-миграций
4. Добавил скрипты liquibase-миграции
5. Добавил целевую реализацию PersonServiceImpl и TaskServiceImpl, работающую со слоем репозитория
6. Удалил InMemoryPersonServiceImpl.java и InMemoryTaskServiceImpl.java
7. Добавил реализацию db-слоя
* репозитории PersonRepository, TaskRepository на базе JpaRepository
* сущности доменной области PersonEntity и TaskEntity
* доработал маперы PersonMapper и TaskMapper
