# src/main/java/ru/ssv/delphin/db/entity/TaskEntity.java
@@ -1,0 +1,44 @@
+package ru.ssv.delphin.db.entity;
+
+import lombok.AccessLevel;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.DynamicInsert;
+import org.hibernate.annotations.DynamicUpdate;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.FetchType;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
+import javax.persistence.Table;
+import java.time.LocalDateTime;
+
+@Data
+@Entity(name = "Task")
+@Table(name = "task")
+@DynamicUpdate
+@DynamicInsert
+@EqualsAndHashCode(of = {"id"})
+@NoArgsConstructor(access = AccessLevel.PUBLIC)
+public class TaskEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "person_id")
+    private PersonEntity personEntity;
+
+    private String name;
+
+    @Column(name = "created_at")
+    private LocalDateTime createdAt;
+
+    @Column(name = "updated_on")
+    private LocalDateTime updatedOn;
+}
