# src/main/resources/openapi/openapi.yaml
@@ -13,7 +13,7 @@ paths:
       tags:
         - Person
       description: Получение списка пользователей
-      operationId: get-all-persons
+      operationId: get-all
       responses:
         200:
           description: Успешный ответ
@@ -34,7 +34,7 @@ paths:
       tags:
         - Person
       description: Добавление нового пользователя
-      operationId: save-person
+      operationId: create
       requestBody:
         description: Пользователь
         required: true
@@ -78,6 +78,30 @@ paths:
             application/json:
               schema:
                 $ref: 'model/person_response.json'
+        404:
+          description: Not Found
+        400:
+          description: Bad Request
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+
+    delete:
+      tags:
+        - Person
+      description: Удаление пользоввателя по id
+      operationId: delete
+      parameters:
+        - name: personId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Идентификатор пользователя
+      responses:
+        200:
+          description: Успешный ответ
         404:
           description: Not Found
         400:
